--- a/index.html
+++ b/index.html
@@ -37,12 +37,20 @@
 		<img src="./img/portræt.png">
 	</div>
 
+ 
+
 	<h2>Video</h2>
 	<div class="video">
 		<video controls>
 			<source src="interview.mp4" type="video/mp4">
+      <figcaption>https://www.youtube.com/watch?v=HtwKtNX_1UE</figcaption>
 		</video>
 	</div>
+
+  <h2>Layoutdiagram</h2>
+  <div class="container">
+    <img src="./img/layoutdiagram.png">
+  </div>
 
 
     </main>
